better launcher icons

--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">WearSquare</string>
     <string name="please_connect">Please connect your Wear to your phone.</string>
+    <string name="check_in">Check in</string>
 
 </resources>
