--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">WearSquare</string>
     <string name="please_connect">Please connect your Wear to your phone.</string>
     <string name="check_in">Check in</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="checking_in">Checking in …</string>
 
 </resources>
