--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="action_settings">Settings</string>
     <string name="checking_in">Checking in …</string>
     <string name="checked_in">Checked in</string>
+    <string name="exploring">Exploring</string>
 
 </resources>
