--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -3,11 +3,16 @@
 
     <string name="app_name">WearSquare</string>
     <string name="connect_to_4sq">Connect to Foursquare</string>
-    <string name="main_message">To check-in from your watch:\n - say \'OK Google, start check in\'\n - or launch
-        \'Check In\' from <a href="https://play.google.com/store/apps/details?id=com.npi.wearminilauncher">Wear
-        Mini Launcher</a></string>
+    <string name="about">Installation of <a href="https://play.google.com/store/apps/details?id=com.npi.wearminilauncher">Wear
+        Mini Launcher</a> is recommended.\n<a href="https://github.com/destil/wearsquare/issues">Report issues</a> | <a
+        href="https://github.com/destil/wearsquare">Open-source code</a> | Author: <a
+        href="http://www.destil.cz/">David Vávra</a></string>
     <string name="login_message">Please login with Foursquare first:</string>
     <string name="please_connect_foursquare_first">Login to Foursquare on your phone first</string>
     <string name="connect_to_internet">Please get online on your phone</string>
+    <string name="how_to_check_in">How to check in:</string>
+    <string name="or">or</string>
+    <string name="how_to_explore">How to explore nearby venues:</string>
+    <string name="logout">Logout</string>
 
 </resources>
