--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -19,5 +19,6 @@
     <string name="desc_explore_by_voice">Explore by voice</string>
     <string name="desc_check_in_by_launcher">Check in by launcher</string>
     <string name="desc_check_in_by_voice">Check in by voice</string>
+    <string name="no_location">No location on your phone. Turn on location in Android settings.</string>
 
 </resources>
