--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -20,5 +20,10 @@
     <string name="desc_check_in_by_launcher">Check in by launcher</string>
     <string name="desc_check_in_by_voice">Check in by voice</string>
     <string name="no_location">No location on your phone. Turn on location in Android settings.</string>
+    <string name="send_checkins_to_twitter">Send check-ins to Twitter</string>
+    <string name="twitter_description">Twitter needs to be connected in Swarm settings</string>
+    <string name="send_checkins_to_facebook">Send check-ins to Facebook</string>
+    <string name="facebook_description">Facebook needs to be connected in Swarm settings</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
