--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="send_checkins_to_facebook">Send check-ins to Facebook</string>
     <string name="facebook_description">Facebook needs to be connected in Swarm settings</string>
     <string name="action_settings">Settings</string>
+    <string name="buy_author_beer">Buy a beer to the author</string>
+    <string name="thanks">Thanks a lot for supporting development!</string>
 
 </resources>
