--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
         href="https://github.com/destil/wearsquare">Open-source code</a> | Author: <a
         href="http://www.destil.cz/">David Vávra</a></string>
     <string name="login_message">Please login with Foursquare first:</string>
-    <string name="please_connect_foursquare_first">Login to Foursquare on your phone first</string>
+    <string name="please_connect_foursquare_first">Login with the WearSquare app on your phone first</string>
     <string name="connect_to_internet">Please get online on your phone</string>
     <string name="how_to_check_in">How to check in:</string>
     <string name="or">or</string>
