--- a/mobile/src/main/res/values/strings.xml
+++ b/mobile/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="action_settings">Settings</string>
     <string name="buy_author_beer">Buy a beer to the author</string>
     <string name="thanks">Thanks a lot for supporting development!</string>
+    <string name="no_google_play">No Google Play installed.</string>
 
 </resources>
