--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="check_in">Check in</string>
     <string name="checking_in">Checking in …</string>
     <string name="checked_in">Checked in</string>
-    <string name="exploring">Exploring</string>
+    <string name="exploring">Explore</string>
     <string name="action_navigate">Navigate</string>
     <string name="open_on_phone">Open on phone</string>
     <string name="no_venues_nearby">No venues nearby</string>
